ci: attempt to fix compilation